fix: login on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,3 +45,9 @@
     @apply font-mono;
   }
 }
+
+@layer utilities {
+  .min-h-mobile {
+    min-height: 90vh;
+  }
+}
